--- a/styles/shop.css
+++ b/styles/shop.css
@@ -1,17 +1,37 @@
 * {
-    
+
+    margin: 0;
+    padding: 0;
 }
 
 
 body {
-	font-family: 'Poppins', sans-serif
+    font-family: 'Poppins', sans-serif
 }
 
-footer {
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li {
+    display: inline-block;
+    position: relative;
+}
+
+nav ul li a {
+    text-decoration: none;
+    padding: 8px 16px;
+    display: block;
+    transition: 0.3s;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+}
+
+section  img {
     display: flex;
-    margin-top: 100%;
-    width: 100%;
-    padding: 100px 15%;
-    background-color:pink;
-    text-align: center;
+    flex-direction: column 3;
 }
