--- a/styles/shop.css
+++ b/styles/shop.css
@@ -10,7 +10,7 @@ body {
 }
 
 img {
-    max-width: 25em;
+    max-width: 100em;
     height: auto;
 }
     
@@ -37,7 +37,8 @@ nav ul li a:hover {
     text-decoration: underline;
 }
 
-li img {
-    display: flex;
-    flex-direction: row;
+main ul {
+    display: grid;
+    grid-template-rows: 1em 1em 1em;
+    grid-template-columns: 1em 1em 1em;
 }
