--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,7 @@ nav ul {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
+	color: white;
 }
 
 nav ul li {
@@ -27,7 +28,7 @@ nav ul li a {
 	padding: 8px 16px;
 	display: block;
 	transition: 0.3s;
-	color:black;
+	color: white;
 }
 
    nav ul li a:hover {
@@ -44,5 +45,12 @@ nav ul li a {
 	line-height: 200px; 
 	color: white;
 	background-color: blue;
+	position: absolute;
+	bottom: 0rem;
+	left: 50%;
+	transform: translate(-50%);
    }
 
+main section:first-child {
+	position: relative;
+}
