--- a/styles/shop.css
+++ b/styles/shop.css
@@ -14,6 +14,9 @@ img {
     height: auto;
 }
     
+header img{
+    max-width: 15em;
+}
 
 nav ul {
     list-style-type: none;
@@ -31,6 +34,7 @@ nav ul li a {
     padding: 8px 16px;
     display: block;
     transition: 0.3s;
+    color: black;
 }
 
 nav ul li a:hover {
@@ -39,6 +43,21 @@ nav ul li a:hover {
 
 main ul {
     display: grid;
-    grid-template-rows: 1em 1em 1em;
-    grid-template-columns: 1em 1em 1em;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+main section {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    
+}
+
+main section img {
+    width: 50em;
+}
+
+main section p {
+    width: 20em;
 }
