--- a/styles/style.css
+++ b/styles/style.css
@@ -36,15 +36,36 @@ header{
     z-index: 999;
     padding: 2em;
     margin: 0;
+    color: white;
 }
 
-header img{
-    width: 10em;
+header svg{
+    fill: #fff;
+    width: 100%;
+    max-width: 10rem;
 }
 
 /* Banners section */
 main > section:nth-of-type(1){
     margin-top: -10em;
+}
+
+.slideshow{
+    position: relative;
+}
+
+.img-nav{
+    position: absolute;
+    bottom: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.slide{
+    display: none;
+    width: 100%;
 }
 
 /* Footer */
@@ -55,4 +76,30 @@ footer {
     padding: 100px 15%;
     background-color:pink;
     text-align: center;
+    list-style-type: none;
+}
+
+ul li {
+    list-style: none;
+}
+
+ul li button {
+        position: relative;
+        padding: 10px 20px;
+        margin: 2em 2em 2em 13em;
+        border: 0.1em solid black;
+        background-color: white;
+        cursor: pointer;
+        overflow: hidden;
+      }
+
+
+li p {
+    text-align: center;
+}
+
+h3 {
+    font-size: small;
+    text-align: center;
+
 }
