--- a/styles/index.css
+++ b/styles/index.css
@@ -4,11 +4,9 @@
 }
 
 
-body {
-	margin: 0;
-    padding: 0;
-	font-family: 'Poppins', sans-serif
+body {	font-family: 'Poppins', sans-serif
 }
+
 
 
 
