--- a/styles/index.css
+++ b/styles/index.css
@@ -4,9 +4,9 @@
 }
 
 
-body {	font-family: 'Poppins', sans-serif
+body {
+	font-family: 'Poppins', sans-serif
 }
-
 
 
 
@@ -61,3 +61,4 @@ main ul {
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
 }
+
