--- a/styles/shop.css
+++ b/styles/shop.css
@@ -61,3 +61,11 @@ main section img {
 main section p {
     width: 20em;
 }
+
+main section:nth-of-type(3) {
+    display: grid;
+}
+
+main section:nth-of-type(3) video {
+    order:-1;
+}
