--- a/styles/index.css
+++ b/styles/index.css
@@ -8,20 +8,15 @@ body {
 	font-family: 'Poppins', sans-serif
 }
 
-
-
-
-nav ul {
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-	color: white;
+/* Banners section */
+main > section:nth-of-type(1){
+    margin-top: -10em;
 }
 
-nav ul li {
-	display: inline-block;
-	position: relative;
+.slideshow{
+    position: relative;
 }
+
 
 nav ul li a {
 	text-decoration: none;
@@ -58,7 +53,25 @@ nav ul li a {
 
 main ul {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+main section:nth-of-type(3) {
+    display: grid;
+	grid-template-columns: 1fr 1fr;
+	align-items: center;
+	justify-content: center;
+	gap: 5em;
+	padding: 4%;
+	margin: 40px;
+}
+
+main section:nth-of-type(3) p {
+	width: 50dvw;
+	text-align: start;
+}
+
+main section:nth-of-type(3) h2 {
+	width: 40dvw;
+}
