--- a/styles/shop.css
+++ b/styles/shop.css
@@ -18,16 +18,6 @@ header img{
     max-width: 15em;
 }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-nav ul li {
-    display: inline-block;
-    position: relative;
-}
 
 nav ul li a {
     text-decoration: none;
@@ -48,28 +38,21 @@ main ul {
 }
 
 main section {
-    display: flex;
-    justify-content: center;
-    gap: 100px;
+    display: grid;
+	grid-template-columns: 1fr 1fr;
+	align-items: center;
+	justify-content: center;
+	gap: 5em;
+	padding: 4%;
+	margin: 40px;
     
 }
 
-main section img {
-    width: 50em;
+main section h2 {
+    width: 40dvw;
 }
 
 main section p {
-    width: 20em;
-}
-
-main section:nth-of-type(3) {
-    display: grid;
-}
-
-main section:nth-of-type(3) video {
-    order:-1;
-}
-
-main section:nth-of-type(3) p {
-    order:0;
+    width: 50dvw;
+    text-align: start;
 }
